--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -7,12 +7,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginTop="20dp">
 
         <ImageView
             android:id="@+id/detail_poster"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="600dp"
             android:scaleType="centerCrop" />
 
         <TextView
