Add Weather based on Hong's version

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,6 +19,19 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#80000000" /> <!-- 50%  -->
+    <Button
+        android:id="@+id/btn_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="WEB SERVICE"
+        android:layout_marginTop="10dp" />
+
+    <Button
+        android:id="@+id/btn_weather"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="CHECK WEATHER"
+        android:layout_marginTop="10dp" />
 
     <!-- Button and text -->
     <LinearLayout
