--- a/app/src/main/res/layout/activity_webservice.xml
+++ b/app/src/main/res/layout/activity_webservice.xml
@@ -45,6 +45,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
+    <TextView
+        android:id="@+id/loading_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="16sp"
+        android:visibility="gone"
+        app:layout_constraintTop_toBottomOf="@id/send_request"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="8dp"/>
+
     <!-- ScrollView for movie posters -->
     <ScrollView
         android:layout_width="0dp"
@@ -60,5 +72,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical" />
     </ScrollView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
