--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -28,6 +28,16 @@
             android:text="Search"/>
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/weather_loading_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:textSize="16sp"
+        android:visibility="gone"
+        android:layout_marginTop="8dp"
+        android:layout_gravity="center_horizontal"/>
+
     <Space
         android:layout_width="match_parent"
         android:layout_height="20dp" />
